<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InputUserGender"
    >

    <Button
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/da_ic_white" />

    <TextView
        android:id="@+id/tvInUserGender_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="55dp"
        android:text="@string/da_tvInUserGender_1"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvInGender_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/da_tvInUserGender_2"
        android:textColor="#999999"
        android:textSize="19.5sp"
        android:textStyle="normal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/da_shadoe_gradient"
        android:text="@string/da_Continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgInUserGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvInGender_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInUserGender_1">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:textSize="24sp"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:button="@null"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gray_border"
            android:textColor="@color/black_80"
            android:text="@string/da_rbMale"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:textAlignment="center"
            android:button="@null"
            android:paddingVertical="20dp"
            android:textColor="@color/black_80"
            android:text="@string/da_rbFemale"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gray_border"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="20dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black_80"
            android:button="@null"
            android:textStyle="bold"
            android:background="@drawable/gray_border"
            android:text="@string/da_rbOther" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>